--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "okta-scim-server",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Sample SCIM server written in Node.js. It can be used with SCIM app in Okta for getting SCIM messages related to user provisioning. It supports following Users endpoints",
   "main": "node_scim_server.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/SohaibAjmal/Okta-Scim-Server.git"
   },
-  "author": "",
+  "author": "Sohaib Ajmal & Andrei Hava",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/SohaibAjmal/Okta-Scim-Server/issues"
@@ -22,5 +22,8 @@
     "sqlite3": "^3.1.13",
     "url": "^0.11.0",
     "uuid": "^3.2.1"
+  },
+  "engines": {
+  	"node": "8.9.4"
   }
 }
